--- a/public/my-assets/scss/styles.scss
+++ b/public/my-assets/scss/styles.scss
@@ -4,6 +4,7 @@
 @import 'variables';
 @import 'base';
 @import 'header';
+@import 'layout/top-navigation';
 @import 'content';
 @import 'button';
 @import 'form';
