--- a/public/my-assets/scss/base.scss
+++ b/public/my-assets/scss/base.scss
@@ -46,3 +46,10 @@ ul, ol {
   margin: 0;
   padding: 0;
 }
+
+.mobile {
+  display: none;
+  @media (max-width: $max-mobile-width) {
+   display: block;
+  }
+}
