--- a/public/my-assets/scss/footer.scss
+++ b/public/my-assets/scss/footer.scss
@@ -11,6 +11,10 @@ footer {
     .col-4, .col-3 {
       width: 30%;
       float: left;
+      @media (max-width: $max-mobile-width) {
+        width: 100%;
+        padding-bottom: 20px;
+      }
       h3 {
         text-transform: uppercase;
         color: #fff;
@@ -20,6 +24,9 @@ footer {
       }
       ul {
         padding-top: 20px;
+        @media (max-width: $max-mobile-width) {
+          padding-top: 10px;
+        }
         li {
           text-align: left;
           a {
@@ -32,6 +39,9 @@ footer {
       }
       &.col-3 {
         width: 40%;
+        @media (max-width: $max-mobile-width) {
+          width: 100%;
+        }
       }
     }
   }
