--- a/public/my-assets/scss/form.scss
+++ b/public/my-assets/scss/form.scss
@@ -14,6 +14,9 @@ form {
     margin-top: 20px;
     padding-left: 35px;
     &:focus {outline:none;}
+    @media (max-width: $max-mobile-width) {
+      width: 100%;
+    }
   }
   input[type="submit"] {
     position: absolute;
@@ -27,6 +30,10 @@ form {
       left:0;
       float: left;
       clear: both;
+    }
+    @media (max-width: $max-mobile-width) {
+      width: 100%;
+      top: 10px;
     }
   }
 
@@ -94,5 +101,8 @@ form {
       left: -20px;
       top: -3px;
     }
+  }
+  @media (max-width: $max-mobile-width) {
+    top: 100px;
   }
 }
