--- a/public/my-assets/stylesheets/form.css
+++ b/public/my-assets/stylesheets/form.css
@@ -1,26 +1,28 @@
 /*
-Error: Undefined variable: "$assets".
-        on line 37 of C:/MAMP/htdocs/vaimo/public/my-assets/scss/form.scss
+Error: Undefined variable: "$max-mobile-width".
+        on line 17 of C:/MAMP/htdocs/vaimo/public/my-assets/scss/form.scss
 
-32: 
-33:   &:after {
-34:     content: "";
-35:     width: 30px;
-36:     height: 30px;
-37:     background-image:  url(#{$assets}/images/mail.png) ;
-38:     background-repeat: no-repeat;
-39:     color: #8f8e8e;
-40:     font-size: 18px;
-41:     line-height: 46px;
-42:     text-align: center;
+12:     border: 0;
+13:     float: left;
+14:     margin-top: 20px;
+15:     padding-left: 35px;
+16:     &:focus {outline:none;}
+17:     @media (max-width: $max-mobile-width) {
+18:       width: 100%;
+19:     }
+20:   }
+21:   input[type="submit"] {
+22:     position: absolute;
 
 Backtrace:
-C:/MAMP/htdocs/vaimo/public/my-assets/scss/form.scss:37
+C:/MAMP/htdocs/vaimo/public/my-assets/scss/form.scss:17
 C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/script/tree/variable.rb:49:in `_perform'
 C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/script/tree/node.rb:50:in `perform'
-C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/script/tree/string_interpolation.rb:93:in `_perform'
-C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/script/tree/node.rb:50:in `perform'
-C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:395:in `visit_prop'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:540:in `block in run_interp_no_strip'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:538:in `map'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:538:in `run_interp_no_strip'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:545:in `run_interp'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:510:in `visit_media'
 C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/base.rb:36:in `visit'
 C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
 C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/stack.rb:79:in `block in with_base'
@@ -79,4 +81,4 @@ C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/vendor/listen/lib/listen/adap
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$assets\".\A         on line 37 of C:/MAMP/htdocs/vaimo/public/my-assets/scss/form.scss\A \A 32: \A 33:   &:after {\A 34:     content: \"\";\A 35:     width: 30px;\A 36:     height: 30px;\A 37:     background-image:  url(#{$assets}/images/mail.png) ;\A 38:     background-repeat: no-repeat;\A 39:     color: #8f8e8e;\A 40:     font-size: 18px;\A 41:     line-height: 46px;\A 42:     text-align: center;"; }
+  content: "Error: Undefined variable: \"$max-mobile-width\".\A         on line 17 of C:/MAMP/htdocs/vaimo/public/my-assets/scss/form.scss\A \A 12:     border: 0;\A 13:     float: left;\A 14:     margin-top: 20px;\A 15:     padding-left: 35px;\A 16:     &:focus {outline:none;}\A 17:     @media (max-width: $max-mobile-width) {\A 18:       width: 100%;\A 19:     }\A 20:   }\A 21:   input[type=\"submit\"] {\A 22:     position: absolute;"; }
