--- a/public/my-assets/stylesheets/layout/top-cart.css
+++ b/public/my-assets/stylesheets/layout/top-cart.css
@@ -1,39 +1,28 @@
 /*
-Error: Undefined variable: "$open-sans".
-        on line 15 of C:/MAMP/htdocs/vaimo/public/my-assets/scss/layout/top-cart.scss
+Error: Undefined variable: "$max-mobile-width".
+        on line 12 of C:/MAMP/htdocs/vaimo/public/my-assets/scss/layout/top-cart.scss
 
-10:   border: 1px solid #b6c2c9;
-11:   top: 36px;
-12:   text-align: center;
-13:  a {
-14:    text-decoration: none;
-15:    font: 12px/36px $open-sans;
-16:    font-weight: 400;
-17:    color: $blue-text-color;
-18:    strong {
-19:      font-weight: 700;
-20:      padding-left: 2px;
+7:   border-radius: 4px;
+8:   height: 36px;
+9:   top: 36px;
+10:   text-align: center;
+11:   border: 1px solid #b6c2c9;
+12:   @media (max-width: $max-mobile-width) {
+13:     width: 45px;
+14:     min-width: 45px;
+15:     margin-right: 10px;
+16:     right: 60px;
+17:     border: 0;
 
 Backtrace:
-C:/MAMP/htdocs/vaimo/public/my-assets/scss/layout/top-cart.scss:15
+C:/MAMP/htdocs/vaimo/public/my-assets/scss/layout/top-cart.scss:12
 C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/script/tree/variable.rb:49:in `_perform'
 C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/script/tree/node.rb:50:in `perform'
-C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/script/tree/list_literal.rb:63:in `block in _perform'
-C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/script/tree/list_literal.rb:63:in `map'
-C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/script/tree/list_literal.rb:63:in `_perform'
-C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/script/tree/node.rb:50:in `perform'
-C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:395:in `visit_prop'
-C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/base.rb:36:in `visit'
-C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/stack.rb:79:in `block in with_base'
-C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/stack.rb:115:in `with_frame'
-C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/stack.rb:79:in `with_base'
-C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:158:in `visit'
-C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:431:in `block (2 levels) in visit_rule'
-C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:431:in `map'
-C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:431:in `block in visit_rule'
-C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:429:in `visit_rule'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:540:in `block in run_interp_no_strip'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:538:in `map'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:538:in `run_interp_no_strip'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:545:in `run_interp'
+C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:510:in `visit_media'
 C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/base.rb:36:in `visit'
 C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
 C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/lib/sass/stack.rb:79:in `block in with_base'
@@ -81,4 +70,4 @@ C:/Ruby22-x64/lib/ruby/gems/2.2.0/gems/sass-3.4.21/vendor/listen/lib/listen/adap
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$open-sans\".\A         on line 15 of C:/MAMP/htdocs/vaimo/public/my-assets/scss/layout/top-cart.scss\A \A 10:   border: 1px solid #b6c2c9;\A 11:   top: 36px;\A 12:   text-align: center;\A 13:  a {\A 14:    text-decoration: none;\A 15:    font: 12px/36px $open-sans;\A 16:    font-weight: 400;\A 17:    color: $blue-text-color;\A 18:    strong {\A 19:      font-weight: 700;\A 20:      padding-left: 2px;"; }
+  content: "Error: Undefined variable: \"$max-mobile-width\".\A         on line 12 of C:/MAMP/htdocs/vaimo/public/my-assets/scss/layout/top-cart.scss\A \A 7:   border-radius: 4px;\A 8:   height: 36px;\A 9:   top: 36px;\A 10:   text-align: center;\A 11:   border: 1px solid #b6c2c9;\A 12:   @media (max-width: $max-mobile-width) {\A 13:     width: 45px;\A 14:     min-width: 45px;\A 15:     margin-right: 10px;\A 16:     right: 60px;\A 17:     border: 0;"; }
