--- a/public/my-assets/scss/layout/top-cart.scss
+++ b/public/my-assets/scss/layout/top-cart.scss
@@ -104,7 +104,7 @@
   padding-top: 5px;
   min-height: 35px;
   @media (max-width: 365px) {
-    width: 100%;
+    min-width: auto;
   }
   .shopping-topcart-items {
     display: none;
@@ -123,7 +123,6 @@
     @media (max-width: 365px) {
       right: 0;
       display: none;
-      min-width: 270px;
       width: 100%;
       position: relative;
       border-radius: 0;
@@ -135,6 +134,7 @@
       padding-top: 5px;
       border-bottom: 2px solid $brand-color;
       padding-bottom: 10px;
+      min-width: 100%;
     }
     li {
       float: left;
