--- a/public/my-assets/stylesheets/styles.css
+++ b/public/my-assets/stylesheets/styles.css
@@ -158,7 +158,7 @@ header #logo {
 @media (max-width: 415px) {
   /* line 14, ../scss/header.scss */
   header #logo {
-    background-size: 160px;
+    background-size: 140px;
     width: 160px;
     top: 37px;
     height: 33px;
@@ -832,7 +832,7 @@ form input {
 @media (max-width: 365px) {
   /* line 92, ../scss/layout/top-cart.scss */
   .shopping-topcart-wrapper {
-    width: 100%;
+    min-width: auto;
   }
 }
 /* line 109, ../scss/layout/top-cart.scss */
@@ -856,7 +856,6 @@ form input {
   .shopping-topcart-wrapper .shopping-topcart-items {
     right: 0;
     display: none;
-    min-width: 270px;
     width: 100%;
     position: relative;
     border-radius: 0;
@@ -868,6 +867,7 @@ form input {
     padding-top: 5px;
     border-bottom: 2px solid #3bc0c3;
     padding-bottom: 10px;
+    min-width: 100%;
   }
 }
 /* line 139, ../scss/layout/top-cart.scss */
