updated mobile navigation

--- a/public/my-assets/scss/header.scss
+++ b/public/my-assets/scss/header.scss
@@ -20,6 +20,7 @@ header {
     background-repeat: no-repeat;
     height: 55px;
     width: 268px;
+    z-index: 99999;
     @media (max-width: 415px) {
       background-size: 140px;
       width: 160px;
