--- a/public/my-assets/scss/layout/top-cart.scss
+++ b/public/my-assets/scss/layout/top-cart.scss
@@ -24,13 +24,19 @@
     right: 0;
   }
 
-
-
  a {
    text-decoration: none;
    font: 12px/36px $open-sans;
    font-weight: 400;
    color: $blue-text-color;
+   &.topcart {
+     padding-left: 28px;
+     @media (max-width: $max-mobile-width) {
+       position: absolute;
+     }
+     right: 0;
+     width: 45px;
+   }
 
    .minicart {
      height: 36px;
@@ -41,9 +47,10 @@
      border-radius: 3px;
 
      @media (max-width: $max-mobile-width) {
+       margin-right: -5px;
        background-color: #edf1f2;
        border: 1px solid #edf1f2;
-       left: 5px;
+       left: -5px;
        height: 36px;
        width: 45px;
        position: absolute;
@@ -80,6 +87,13 @@
 
   .topcart {
     padding-left: 28px;
+    @media (max-width: $max-mobile-width) {
+      padding-left: 0;
+      position: absolute;
+      right: 61px;
+      width: 45px;
+      height: 35px;
+    }
     #total-qty-item, .item-text,  strong {
       @media (max-width: $max-mobile-width) {
         display: none;
@@ -93,7 +107,7 @@
   min-width: 210px;
   @media (max-width: $max-mobile-width) {
     min-width: 45px;
-    Z-INDEX: 1;
+    z-index: 99999;
   }
   width: auto;
   position: absolute;
@@ -104,7 +118,8 @@
   padding-top: 5px;
   min-height: 35px;
   @media (max-width: 365px) {
-    min-width: auto;
+    min-width: 100%;
+    top: 30PX;
   }
   .shopping-topcart-items {
     display: none;
@@ -135,6 +150,7 @@
       border-bottom: 2px solid $brand-color;
       padding-bottom: 10px;
       min-width: 100%;
+      margin-top:-10px;
     }
     li {
       float: left;
