updated icon cart

--- a/public/my-assets/scss/header.scss
+++ b/public/my-assets/scss/header.scss
@@ -42,7 +42,7 @@ header {
     border: 1px solid #edf1f2;
     top: 36px;
     text-align: center;
-    z-index: 120;
+    z-index: 999999999999;
     img {
       position: absolute;
       top: 7px;
