updated remove icon

--- a/public/my-assets/stylesheets/styles.css
+++ b/public/my-assets/stylesheets/styles.css
@@ -945,8 +945,9 @@ form input {
   position: absolute;
   left: -10px;
   top: 9px;
+  background-size: 15px;
 }
-/* line 199, ../scss/layout/top-cart.scss */
+/* line 200, ../scss/layout/top-cart.scss */
 .shopping-topcart-wrapper .shopping-topcart-items .button {
   float: right;
   margin: 10px;
