--- a/public/my-assets/scss/layout/top-cart.scss
+++ b/public/my-assets/scss/layout/top-cart.scss
@@ -193,6 +193,7 @@
           position: absolute;
           left: -10px;
           top: 9px;
+          background-size: 15px;
         }
       }
     }
