--- a/public/my-assets/scss/base.scss
+++ b/public/my-assets/scss/base.scss
@@ -4,6 +4,7 @@ html {
   box-sizing: border-box;
   text-rendering: optimizeLegibility !important;
   -webkit-font-smoothing: antialiased !important;
+  overflow-x: hidden;
 }
 
 p {
