--- a/public/my-assets/stylesheets/styles.css
+++ b/public/my-assets/stylesheets/styles.css
@@ -60,41 +60,42 @@ html {
   box-sizing: border-box;
   text-rendering: optimizeLegibility !important;
   -webkit-font-smoothing: antialiased !important;
+  overflow-x: hidden;
 }
 
-/* line 9, ../scss/base.scss */
+/* line 10, ../scss/base.scss */
 p {
   line-height: 1.3;
 }
 
-/* line 13, ../scss/base.scss */
+/* line 14, ../scss/base.scss */
 h1, h2 {
   line-height: 1.5;
 }
 
-/* line 17, ../scss/base.scss */
+/* line 18, ../scss/base.scss */
 h1 {
   font: 42px/1.3 "Open Sans", sans-serif;
 }
 
-/* line 21, ../scss/base.scss */
+/* line 22, ../scss/base.scss */
 h2 {
   font: 24px/1.3 "Open Sans", sans-serif;
 }
 
-/* line 25, ../scss/base.scss */
+/* line 26, ../scss/base.scss */
 h3 {
   font: 18px/1.3 "Open Sans", sans-serif;
 }
 
-/* line 29, ../scss/base.scss */
+/* line 30, ../scss/base.scss */
 *,
 *:before,
 *:after {
   box-sizing: inherit;
 }
 
-/* line 35, ../scss/base.scss */
+/* line 36, ../scss/base.scss */
 body {
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
@@ -104,19 +105,19 @@ body {
   border-top: 20px solid #3bc0c3;
 }
 
-/* line 44, ../scss/base.scss */
+/* line 45, ../scss/base.scss */
 ul, ol {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-/* line 50, ../scss/base.scss */
+/* line 51, ../scss/base.scss */
 .mobile {
   display: none;
 }
 @media (max-width: 767px) {
-  /* line 50, ../scss/base.scss */
+  /* line 51, ../scss/base.scss */
   .mobile {
     display: block;
   }
